Fixed readGrammarFromFile
Fixed #2.